# monetary-maid

./: .gitignore  .monetary_maid.config  .pre-commit-config.yaml  Makefile  README.md  __init__.py  docker-compose.yml  env_credentials  gedit_wally.txt  get_env.py  main.py  marmaid.md  model.py  modeling.drawio  monetary_maid.config  monetary_maid.py  old.py  pyproject.toml
bussines/: wallet.py
bussines/banks/: nubank.py  santander.py
bussines/helpers/: args.py  func.py
bussines/sf_machiine.py/: prepair_salary.py
documents/: cadastro_transacao.drawio  model.drawio
models/: fixed_debits.py  floated_debits.py
monetary_maid/: get_env.py  model.py  view.py
monetary_maid/banks/: nubank.py
monetary_maid/bussines/: wallet.py
monetary_maid/bussines/banks/: atm.py  nubank.py  santander.py
monetary_maid/helpers/: args.py  database.py  validators.py
monetary_maid/test/: conftest.py
monetary_maid/views/: atm.py  wallet.py
src/: get_env.py
src/bussines/: atm.py  categories.py  config.py  debit.py  nubank.py
src/helpers/: clear.py  database.py  exception.py  validators.py
src/models/: atm.py  base.py  categories.py  debit.py
src/test/: conftest.py  test_business.py
src/views/: atm.py  bills.py  categories.py  config.py  debit.py  establishment.py  homescreen.py  statment.py  wallet.py
test/: conftest.py  test_business.py
