[tool.poetry]
name = "saved-future"
version = "0.1.0"
description = ""
authors = ["Pedro Chedid <pedro.chedid@a55.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
environs = "^9.3.5"
python-dotenv = "^0.19.2"
psycopg2-binary = "^2.9.2"
SQLAlchemy = "^1.4.28"
pynubank = "^2.17.0"
loguru = "^0.5.3"
arrow = "^1.2.1"
pytest = "^7.1.2"
click = "^8.1.3"
matplotlib = "^3.6.1"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
